[package]
name = "signature"
version = "0.1.0"
authors = ["Fluence Labs"]
publish = false
description = "Signature check WASM module"
edition = "2018"

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = "abort"

[lib]
name = "signature"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.1.0"
log = "0.4"
fluence = { version = "0.1.3", features = ["wasm_logger"] }
libsecp256k1 = "0.2.2"
sha2 = "0.8.0"

