[package]
name = "llama_db"
version = "0.1.0"
authors = ["Fluence Labs"]
publish = false
description = "LlamaDb wrapper for running into Fluence WasmVm"
edition = "2018"

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = "abort"

[lib]
name = "llama_db"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
lazy_static = "1.1.0"
fluence = { version = "0.0.12", features = ["wasm_logger"] }
llamadb = { git = "https://github.com/fluencelabs/llamadb.git", branch = "master" }
